# ai-travel-recommender

./: .gitignore  Dockerfile  app.py  elasticsearch.yaml  filebeat.yaml  k8s-deployment.yaml  kibana.yaml  logstash.yaml  main.py  pyproject.toml  requirements.txt  setup.py
src/chains/: itinerary_chain.py
src/config/: config.py
src/core/: planner.py
